Fix Vercel deployment: upgrade to Node 22.x and simplify config

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,5 @@ MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/nurseDB?retryWri
 # Server Port (optional, defaults to 3000)
 PORT=3000
 
-# Node Environment (production, development, test)
+# Node Environment (development, production, test)
 NODE_ENV=development
